# hotel-booking-app

./: .gitignore  README.md
src/backend/: pyproject.toml
src/backend/main_backend/: .flaskenv  Dockerfile  cookiecutter-options.yml  docker-compose.yml  pyproject.toml  setup.py  tox.ini
src/backend/main_backend/main/: app.py  extensions.py  manage.py
src/backend/main_backend/main/api/: __init__.py  views.py
src/backend/main_backend/main/api/resources/: __init__.py  user.py
src/backend/main_backend/main/api/schemas/: __init__.py  user.py
src/backend/main_backend/main/auth/: __init__.py  helpers.py  views.py
src/backend/main_backend/main/commons/: apispec.py
src/backend/main_backend/main/commons/templates/: redoc.j2  swagger.j2
src/backend/main_backend/main/models/: __init__.py  blocklist.py  user.py
src/backend/main_backend/tests/: conftest.py  factories.py  test_user.py
