[tool.poetry]
name = "main-backend"
version = "0.1.0"
description = ""
authors = ["thiha-onow <thihaaung@onow.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
marshmallow = "^3.21.1"
flask = "^3.0.3"
flask-restful = "^0.3.10"
flask-migrate = "^4.0.7"
flask-sqlalchemy = "^3.1.1"
flask-marshmallow = "^1.2.1"
flask-jwt-extended = "^4.6.0"
marshmallow-sqlalchemy = "^1.0.0"
python-dotenv = "^1.0.1"
passlib = "^1.7.4"
apispec = "^6.6.1"
apispec-webframeworks = "^1.1.0"
tox = "^4.15.0"
gunicorn = "^22.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
